[package]
name = "moon-calc"
version = "1.0.1"
edition = "2021"
repository = "https://github.com/0elek/moon-calc"
description = "Moon phase calculator"
license = "MIT"
homepage = "https://github.com/0elek/moon-calc"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
